Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32544

Values in "Test Results" view are not aligned

XMLWordPrintable

    • 0d357750d (master)

      1. Have a simple Qt Test project with a failing QCOMPARE.
      2.  Run it as a usual project and see the Application Output view.
        It may look like this:
        PASS   : SomeStrings::initTestCase()
        PASS   : SomeStrings::arg()
        FAIL!  : SomeStrings::calc() Compared values are not the same
           Actual   (QString("one") + QString("two")): "onetwo"
           Expected (QString("three"))               : "three"
           Loc: [/tmp/projekte/untitled4/tst_somestrings.cpp(27)]
        PASS   : SomeStrings::cleanupTestCase()
        

        The executed codes and their results are nicely aligned in a table-like layout. This makes it easier for the user to spot the differences in less obvious cases.

      3. Run the same from the "Tests" view, e.g. using "Run All Tests".
        The output may look like:

        It's not aligned at all. I'd prefer if this also showed something resembling a table.

        1. test.png
          26 kB
          Robert Löhning
        For Gerrit Dashboard: QTCREATORBUG-32544
        # Subject Branch Project Status CR V

            cstenger Christian Stenger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes